fix: add translations back

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -4,7 +4,6 @@
     "addQuota": "Add Quota",
     "address": "Address",
     "assign": "Assign",
-    "all": "All",
     "cancel": "Cancel",
     "changeClientSecret": "Change Client Secret",
     "changeTier": "Change Tier",
@@ -26,8 +25,8 @@
     "displayName": "Display Name",
     "find": "Find",
     "hour": "Hour",
-    "identity": "Identity",
     "identityVersion": "Identity Version",
+    "identity": "Identity",
     "lastLoginAt": "Last Login at",
     "light": "Light",
     "max": "Max",
@@ -79,22 +78,24 @@
     "createTierDialog_tierCreatedSuccess": "Tier was created successfully.",
     "deletionProcessAuditLogs_title": "Identity deletion process audit logs",
     "deletionProcessAuditLogs_inputHint": "Enter an identity address",
-    "deletionProcessAuditLogsTable_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
-    "deletionProcessAuditLogsTable_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
-    "deletionProcessAuditLogsTable_approved": "The deletion process was approved.",
-    "deletionProcessAuditLogsTable_rejected": "The deletion process was rejected.",
-    "deletionProcessAuditLogsTable_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
-    "deletionProcessAuditLogsTable_cancelledBySupport": "The deletion process was cancelled by a support employee.",
-    "deletionProcessAuditLogsTable_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
-    "deletionProcessAuditLogsTable_approvalReminder1Sent": "The first approval reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_approvalReminder2Sent": "The second approval reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_approvalReminder3Sent": "The third approval reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_haveBeenDeleted": "have been deleted.",
+    "deletionProcessAuditLogsDetails_title": "Deletion Process Audit Logs",
+    "deletionProcessAuditLogsDetails_title_description": "Identity",
     "deletionProcessAuditLogsDetails_noDataFound": "No deletion process audit logs found.",
-    "deletionProcessAuditLogsTable_auditLogs_waitingForApproval": "Waiting for Approval",
+    "deletionProcessAuditLogsDetails_waitingForApproval": "Waiting for Approval",
+    "deletionProcessAuditLogsDetails_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
+    "deletionProcessAuditLogsDetails_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
+    "deletionProcessAuditLogsDetails_approved": "The deletion process was approved.",
+    "deletionProcessAuditLogsDetails_rejected": "The deletion process was rejected.",
+    "deletionProcessAuditLogsDetails_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
+    "deletionProcessAuditLogsDetails_cancelledBySupport": "The deletion process was cancelled by a support employee.",
+    "deletionProcessAuditLogsDetails_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
+    "deletionProcessAuditLogsDetails_approvalReminder1Sent": "The first approval reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_approvalReminder2Sent": "The second approval reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_approvalReminder3Sent": "The third approval reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsDetails_unknownMessageKey": "Unknown message key.",
     "identityDetails_card_identityClipboardMessage": "Identity address copied to clipboard.",
     "identityDetails_card_publicKey": "Public Key",
     "identityDetails_card_publicKey_copyToClipboardMessage": "Public key copied to clipboard.",
@@ -105,6 +106,18 @@
     "identityDetails_sentMessages_title": "Sent Messages",
     "identityDetails_sentMessages_subtitle": "View messages sent by this identity.",
     "identityDetails_noSentMessagesFound": "No sent messages found.",
+    "identityRelationshipTable_peer": "Peer",
+    "identityRelationshipTable_requestedBy": "Requested By",
+    "identityRelationshipTable_templateId": "Template ID",
+    "identityRelationshipTable_status": "Status",
+    "identityRelationshipTable_creationDate": "Creation Date",
+    "identityRelationshipTable_answeredAt": "Answered At",
+    "identityRelationshipTable_createdByDevice": "Created By Device",
+    "identityRelationshipTable_answeredByDevice": "Answered By Device",
+    "identityRelationshipTable_emptyRelationshipTable": "No relationships for this identity found.",
+    "identityRelationshipTable_relationships": "Relationships",
+    "identityRelationshipTable_viewIdentityRelationships": "View relationships of this identity",
+    "identityRelationshipTable_errorLoadingData": "An error occurred loading data.",
     "identityMessageTable_recipients": "Recipients",
     "identityMessageTable_senderAddress": "Sender Address",
     "identityMessageTable_senderDevice": "Sender Device",
