--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -4,6 +4,7 @@
     "addQuota": "Add Quota",
     "address": "Address",
     "assign": "Assign",
+    "all": "All",
     "cancel": "Cancel",
     "changeClientSecret": "Change Client Secret",
     "changeTier": "Change Tier",
@@ -81,21 +82,21 @@
     "deletionProcessAuditLogsDetails_title": "Deletion Process Audit Logs",
     "deletionProcessAuditLogsDetails_title_description": "Identity",
     "deletionProcessAuditLogsDetails_noDataFound": "No deletion process audit logs found.",
-    "deletionProcessAuditLogsDetails_waitingForApproval": "Waiting for Approval",
-    "deletionProcessAuditLogsDetails_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
-    "deletionProcessAuditLogsDetails_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
-    "deletionProcessAuditLogsDetails_approved": "The deletion process was approved.",
-    "deletionProcessAuditLogsDetails_rejected": "The deletion process was rejected.",
-    "deletionProcessAuditLogsDetails_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
-    "deletionProcessAuditLogsDetails_cancelledBySupport": "The deletion process was cancelled by a support employee.",
-    "deletionProcessAuditLogsDetails_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
-    "deletionProcessAuditLogsDetails_approvalReminder1Sent": "The first approval reminder notification has been sent.",
-    "deletionProcessAuditLogsDetails_approvalReminder2Sent": "The second approval reminder notification has been sent.",
-    "deletionProcessAuditLogsDetails_approvalReminder3Sent": "The third approval reminder notification has been sent.",
-    "deletionProcessAuditLogsDetails_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsDetails_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsDetails_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsDetails_unknownMessageKey": "Unknown message key.",
+    "deletionProcessAuditLogsTable_auditLogs_waitingForApproval": "Waiting for Approval",
+    "deletionProcessAuditLogsTable_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
+    "deletionProcessAuditLogsTable_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
+    "deletionProcessAuditLogsTable_approved": "The deletion process was approved.",
+    "deletionProcessAuditLogsTable_rejected": "The deletion process was rejected.",
+    "deletionProcessAuditLogsTable_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
+    "deletionProcessAuditLogsTable_cancelledBySupport": "The deletion process was cancelled by a support employee.",
+    "deletionProcessAuditLogsTable_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
+    "deletionProcessAuditLogsTable_approvalReminder1Sent": "The first approval reminder notification has been sent.",
+    "deletionProcessAuditLogsTable_approvalReminder2Sent": "The second approval reminder notification has been sent.",
+    "deletionProcessAuditLogsTable_approvalReminder3Sent": "The third approval reminder notification has been sent.",
+    "deletionProcessAuditLogsTable_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsTable_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsTable_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
+    "deletionProcessAuditLogsTable_haveBeenDeleted": "have been deleted.",
     "identityDetails_card_identityClipboardMessage": "Identity address copied to clipboard.",
     "identityDetails_card_publicKey": "Public Key",
     "identityDetails_card_publicKey_copyToClipboardMessage": "Public key copied to clipboard.",
