chore: add localization for client success message

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -60,7 +60,8 @@
     "addQuotaDialog_maxAmount_message": "Only numbers greater or equal to 0 are valid.",
     "changeClientSecretDialog_copyToClipboard": "Copy to Clipboard",
     "changeTierDialog_error": "Failed to update identity. Please try again.",
-    "changeTierDialog_success": "Identity updated successfully.",
+    "changeTierDialog_success_identity": "Identity updated successfully.",
+    "changeTierDialog_success_client": "Client updated successfully.",
     "clientsOverview_title": "A list of existing clients",
     "clientsOverview_noClientsFound": "No clients found.",
     "clientsOverview_removeSelectedClients_title": "Remove Clients",
