refactor: simplify and properly translate

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -92,14 +92,19 @@
     "deletionProcessDetails_title": "Deletion Process Details",
     "deletionProcessDetails_deletionProcessID": "Deletion Process ID",
     "deletionProcessDetails_status": "Status",
+    "deletionProcessDetails_status_waitingForApproval": "Waiting for Approval",
+    "deletionProcessDetails_status_approved": "Approved",
+    "deletionProcessDetails_status_cancelled": "Cancelled",
+    "deletionProcessDetails_status_rejected": "Rejected",
+    "deletionProcessDetails_status_deleting": "Deleting",
     "deletionProcessDetails_auditLogs_title": "Deletion Process Audit Logs",
     "deletionProcessDetails_auditLogs_title_description": "View deletion process audit logs for Identity",
     "deletionProcessDetails_auditLogs_noData": "No deletion process audit logs found.",
     "deletionProcessDetails_cancelDeletionProcess_title": "Cancel Deletion Process",
     "deletionProcessDetails_cancelDeletionProcess_message": "Are you sure you want to cancel deletion process?",
     "deletionProcessDetails_deletionProcessCancelledSuccessfully": "Deletion Process was cancelled successfully.",
-    "deletionProcessAuditLogsTable_auditLogs_waitingForApproval": "Waiting for Approval",
     "deletionProcessDetails_cancelDeletionProcess_tooltipMessage": "Deletion Process must be in status Approved.",
+    "deletionProcessAuditLogsTable_auditLogs_waitingForApproval": "Waiting for Approval",
     "deletionProcessAuditLogsTable_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
     "deletionProcessAuditLogsTable_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
     "deletionProcessAuditLogsTable_approved": "The deletion process was approved.",
@@ -119,21 +124,6 @@
     "deletionProcessAuditLogsDetails_title": "Deletion Process Audit Logs",
     "deletionProcessAuditLogsDetails_title_description": "Identity",
     "deletionProcessAuditLogsDetails_noDataFound": "No deletion process audit logs found.",
-    "deletionProcessAuditLogsTable_auditLogs_waitingForApproval": "Waiting for Approval",
-    "deletionProcessAuditLogsTable_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
-    "deletionProcessAuditLogsTable_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
-    "deletionProcessAuditLogsTable_approved": "The deletion process was approved.",
-    "deletionProcessAuditLogsTable_rejected": "The deletion process was rejected.",
-    "deletionProcessAuditLogsTable_cancelledByOwner": "The deletion process was cancelled by the owner of the identity.",
-    "deletionProcessAuditLogsTable_cancelledBySupport": "The deletion process was cancelled by a support employee.",
-    "deletionProcessAuditLogsTable_cancelledAutomatically": "The deletion process was cancelled automatically, because it wasn't approved by the owner within the approval period.",
-    "deletionProcessAuditLogsTable_approvalReminder1Sent": "The first approval reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_approvalReminder2Sent": "The second approval reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_approvalReminder3Sent": "The third approval reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_gracePeriodReminder1Sent": "The first grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_gracePeriodReminder2Sent": "The second grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_gracePeriodReminder3Sent": "The third grace period reminder notification has been sent.",
-    "deletionProcessAuditLogsTable_haveBeenDeleted": "have been deleted.",
     "identityDetails_card_identityClipboardMessage": "Identity address copied to clipboard.",
     "identityDetails_card_publicKey": "Public Key",
     "identityDetails_card_publicKey_copyToClipboardMessage": "Public key copied to clipboard.",
