refactor: make pretty useable and working

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -102,8 +102,8 @@
     "deletionProcessDetails_auditLogs_noData": "No deletion process audit logs found.",
     "deletionProcessDetails_cancelDeletionProcess_title": "Cancel Deletion Process",
     "deletionProcessDetails_cancelDeletionProcess_message": "Are you sure you want to cancel deletion process?",
-    "deletionProcessDetails_deletionProcessCancelledSuccessfully": "Deletion Process was cancelled successfully.",
-    "deletionProcessDetails_cancelDeletionProcess_tooltipMessage": "Deletion Process must be in status Approved.",
+    "deletionProcessDetails_deletionProcessCancelledSuccessfully": "The deletion process was cancelled successfully.",
+    "deletionProcessDetails_cancelDeletionProcess_disabledTooltipMessage": "The deletion process must be in status Approved in order to be cancellable.",
     "deletionProcessAuditLogsTable_auditLogs_waitingForApproval": "Waiting for Approval",
     "deletionProcessAuditLogsTable_startedByOwner": "The deletion process was started by the owner. It was automatically approved.",
     "deletionProcessAuditLogsTable_startedBySupport": "The deletion process was started by support. It is now waiting for approval.",
