chore: add new translations

--- a/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -40,6 +40,7 @@
     "name": "Name",
     "numberOfDevices": "Number of Devices",
     "numberOfIdentities": "Number of Identities",
+    "noLimit": "No Limit",
     "period": "Period",
     "quotas": "Quotas",
     "retry": "Retry",
@@ -56,6 +57,7 @@
     "tiers": "Tiers",
     "usage": "Usage",
     "used": "Used",
+    "update": "Update",
     "week": "Week",
     "year": "Year",
     "yes": "Yes",
@@ -71,6 +73,7 @@
     "clientsOverview_removeSelectedClients_error": "An error occurred while deleting the client(s). Please try again.",
     "clientsOverview_removeSelectedClients_success": "Selected client(s) have been removed.",
     "clientDetails_card_defaultTier": "Default Tier",
+    "clientDetails_maxIdentities_tooltip": "",
     "createClientDialog_title": "Create Client",
     "createClientDialog_clientID_message": "A client ID will be generated if this field is left blank.",
     "createClientDialog_displayName_message": "Client ID will be used as a Display Name if no value is provided.",
@@ -169,6 +172,11 @@
     "identitiesDataTable_failedToLoadData": "Failed to load data.",
     "identitiesDataTable_createdWithClient": "Created with Client",
     "identitiesFilter_searchClients": "Search Clients",
+    "maxIdentities_title": "Update Max Identities",
+    "maxIdentities_error_message": "Error updating max identities",
+    "maxIdentities_success_message": "Max identities updated successfully.",
+    "maxIdentities_inputHint": "Enter an maximum number of identities",
+    "maxIdentities_error_message_maxIdentitiesLowerThanNumberOfIdentities": "Entered maximum number of identities is lower or equal to actual number of identities.",
     "quotaButtonGroup_removeQuotas_title": "Remove Quotas",
     "quotaButtonGroup_deletionMessage": "Are you sure you want to remove the selected quotas from?",
     "quotaButtonGroup_theIdentity": "The Identity",
