chore: add change to translations

--- a/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -6,6 +6,7 @@
     "assign": "Assign",
     "all": "All",
     "cancel": "Cancel",
+    "change": "Change",
     "changeClientSecret": "Change Client Secret",
     "changeTier": "Change Tier",
     "clientID": "Client ID",
