refactor: simplify showChangeTierDialog

--- a/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -64,9 +64,8 @@
     "yes": "Yes",
     "addQuotaDialog_maxAmount_message": "Only numbers greater or equal to 0 are valid.",
     "changeClientSecretDialog_copyToClipboard": "Copy to Clipboard",
-    "changeTierDialog_error": "Failed to update identity. Please try again.",
-    "changeTierDialog_success_identity": "Identity updated successfully.",
-    "changeTierDialog_success_client": "Client updated successfully.",
+    "changeTierDialog_success": "Tier changed successfully.",
+    "changeTierDialog_error": "Failed to change the tier. Please try again.",
     "clientsOverview_title": "A list of existing clients",
     "clientsOverview_noClientsFound": "No clients found.",
     "clientsOverview_removeSelectedClients_title": "Remove Clients",
