feat: add reload button

--- a/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -47,6 +47,7 @@
     "retry": "Retry",
     "required": "required",
     "remove": "Remove",
+    "reload": "Reload",
     "save": "Save",
     "showAll": "Show all",
     "searchTiers": "Search Tiers",
