--- a/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -100,7 +100,6 @@
     "createAnnouncementDialog_title": "Create Announcement",
     "createAnnouncementDialog_explanation": "If a language is not maintained, the English text will be used.",
     "createAnnouncementDialog_impact": "Impact",
-    "createAnnouncementDialog_languages": "Languages",
     "createAnnouncement_selectLanguage": "Select Language",
     "createAnnouncement_english": "English",
     "createAnnouncement_german": "German",
@@ -184,6 +183,7 @@
     "identitiesDataTable_noIdentitiesFound": "No identities found.",
     "identitiesDataTable_failedToLoadData": "Failed to load data.",
     "identitiesDataTable_createdWithClient": "Created with Client",
+    "languageMultiSelect_selectLanguages": "Select Languages",
     "maxIdentities_title": "Update Max Identities",
     "maxIdentities_error_message": "Error updating max identities",
     "maxIdentities_success_message": "Max identities updated successfully.",
