Admin UI: Encountering infinite loading when entering non-existent identity/client/tier ids in URL (#834)
* feat: add error screen

* chore: add translations

* fix: revert changes

* chore: make use of errors

* chore: add attribute

* chore: disable or enable button depending on the text

* chore: adapt to the official design

* refactor: rename translation

* chore: make it non-nullable

* chore: remove duplicate files

* chore: change color

* fix: use result to avoid try/catch block

* chore: remove unused translation

* fix: go to the proper return route

* chore: remove unnecessary if statement

* chore: use pushReplacement and simplify

* chore: change attribute

* chore: simplify remove unnecessary use of variable

* chore: make one line

* chore: remove unnecessary setting of a color field

---------

Co-authored-by: Nikola Dmitrasinovic <nikola.dm@yahoo.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Nikola Dmitrasinovic <118458592+NikolaDmitrasinovic@users.noreply.github.com>

--- a/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -132,6 +132,8 @@
     "deletionProcessAuditLogs_title": "Identity deletion process audit logs",
     "deletionProcessAuditLogs_inputHint": "Enter an identity address",
     "deletionProcessAuditLogsDetails_noDataFound": "No deletion process audit logs found.",
+    "errorScreen_goToHome": "Go to Home",
+    "errorScreen_notFound": "Not Found",
     "identityDetails_card_identityClipboardMessage": "Identity address copied to clipboard.",
     "identityDetails_card_publicKey": "Public Key",
     "identityDetails_receivedMessages_title": "Received Messages",
