--- a/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -76,6 +76,8 @@
     "addQuotaDialog_maxAmount_message": "Only numbers greater or equal to 0 are valid.",
     "announcementsOverview_title": "A list of all announcements",
     "announcementsOverview_severity": "Severity",
+    "announcementsOverview_noAnnouncementsFound": "No announcements found.",
+    "announcementsDialog_details": "Announcement Details",
     "changeClientSecretDialog_copyToClipboard": "Copy to Clipboard",
     "changeTierDialog_success": "Tier changed successfully.",
     "changeTierDialog_error": "Failed to change the tier. Please try again.",
