feat: add Identity device table

--- a/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -142,6 +142,10 @@
     "identityDetails_sentMessages_title": "Sent Messages",
     "identityDetails_sentMessages_subtitle": "View messages sent by this identity.",
     "identityDetails_noSentMessagesFound": "No sent messages found.",
+    "identityDevices_title": "Devices",
+    "identityDevices_title_description": "View devices of this Identity",
+    "identityDevices_username": "Username",
+    "identityDevices_communicationLanguage": "Communication Language",
     "identityRelationshipTable_peer": "Peer",
     "identityRelationshipTable_requestedBy": "Requested By",
     "identityRelationshipTable_templateId": "Template ID",
