chore: complete announcement api calls

--- a/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
+++ b/Applications/AdminUi/apps/admin_ui/lib/l10n/app_en.arb
@@ -103,6 +103,9 @@
     "createAnnouncementDialog_explanation": "If a language is not maintained, the English text will be used.",
     "createAnnouncementDialog_impact": "Impact",
     "createAnnouncement_selectLanguage": "Select Language",
+    "createAnnouncement_pleaseFillAllRequiredFields": "Please fill all required fields.",
+    "createAnnouncement_pleaseSelectImpact": "Please select impact.",
+    "createAnnouncement_announcementSuccess": "Announcement created successfully.",
     "createAnnouncement_english": "English",
     "createAnnouncement_german": "German",
     "createAnnouncement_portuguese": "Portuguese",
